Move TestHelper code to .cc file, fix windows?
Signed-off-by: Steve Peters <scpeters@openrobotics.org>

--- a/test/helpers/CMakeLists.txt
+++ b/test/helpers/CMakeLists.txt
@@ -5,6 +5,7 @@ set (qt_headers
 QT5_WRAP_CPP(headers_MOC ${qt_headers})
 
 add_library(${PROJECT_NAME}_test_helpers SHARED
+  TestHelper.cc
   ${headers_MOC}
 )
 target_link_libraries(${PROJECT_NAME}_test_helpers
