--- a/test/helpers/CMakeLists.txt
+++ b/test/helpers/CMakeLists.txt
@@ -8,8 +8,8 @@ add_library(${PROJECT_NAME}_test_helpers SHARED
   TestHelper.cc
   ${headers_MOC}
 )
+target_compile_definitions(${PROJECT_NAME}_test_helpers PRIVATE TestHelper_EXPORTS)
 target_link_libraries(${PROJECT_NAME}_test_helpers
   PUBLIC
     ${PROJECT_LIBRARY_TARGET_NAME}
 )
-
