--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -114,6 +114,7 @@ function(ign_gui_add_plugin plugin_name)
 endfunction()
 
 # Plugins
+add_subdirectory(camera_controller_manager)
 add_subdirectory(grid_3d)
 add_subdirectory(image_display)
 add_subdirectory(key_publisher)
