Adds dialog_on_exit atribute to example .config
Signed-off-by: Franco Cipollone <franco.c@ekumenlabs.com>

--- a/examples/config/layout.config
+++ b/examples/config/layout.config
@@ -6,6 +6,7 @@
   <position_y>230</position_y>
   <width>550</width>
   <height>551</height>
+  <dialog_on_exit>true</dialog_on_exit>
 </window>
 <plugin filename="Publisher">
     <title>1</title>
