Added view control plugin
Signed-off-by: ahcorde <ahcorde@gmail.com>

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -124,5 +124,6 @@ add_subdirectory(screenshot)
 add_subdirectory(topic_echo)
 add_subdirectory(topic_viewer)
 add_subdirectory(transport_scene_manager)
+add_subdirectory(view_control)
 add_subdirectory(world_control)
 add_subdirectory(world_stats)
