--- a/examples/config/scene3d.config
+++ b/examples/config/scene3d.config
@@ -4,7 +4,7 @@
     <width>1216</width>
     <height>894</height>
 </window>
-<plugin filename="Scene3D">
+<plugin filename="MinimalScene">
     <ignition-gui>
       <title>View 1</title>
       <property type="string" key="state">docked</property>
@@ -32,23 +32,6 @@
   <deletion_topic>/example/delete</deletion_topic>
   <scene_topic>/example/scene</scene_topic>
 </plugin>
-<!-- TODO(anyone) Support multiple scenes in the same window
-  plugin filename="Scene3D">
-    <title>View 2</title>
-    <scene>scene</scene>
-    <camera_pose>-6 -6 6 0 0.5 0.7</camera_pose>
-</plugin-->
-<!-- TODO(anyone) Fix grid plugin
-  plugin filename="Grid3D" delete_later="true">
-  <engine>ogre</engine>
-  <scene>scene</scene>
-  <insert>
-    <cell_count>5</cell_count>
-    <pose>3.0 0 0 0 0 0</pose>
-    <color>0.2 0.2 0.2 1.0</color>
-  </insert>
-</plugin-->
-
 <plugin filename="WorldControl">
   <ignition-gui>
     <title>Controls</title>
