--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -119,6 +119,7 @@ add_subdirectory(image_display)
 add_subdirectory(key_publisher)
 add_subdirectory(plotting)
 add_subdirectory(publisher)
+add_subdirectory(minimal_scene)
 add_subdirectory(scene3d)
 add_subdirectory(screenshot)
 add_subdirectory(topic_echo)
