--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -115,12 +115,14 @@ endfunction()
 
 # Plugins
 add_subdirectory(grid_3d)
+add_subdirectory(grid_config)
 add_subdirectory(image_display)
 add_subdirectory(key_publisher)
 add_subdirectory(plotting)
 add_subdirectory(publisher)
 add_subdirectory(scene3d)
 add_subdirectory(screenshot)
+add_subdirectory(tape_measure)
 add_subdirectory(topic_echo)
 add_subdirectory(topic_viewer)
 add_subdirectory(world_control)
