--- a/include/ignition/gui/config.hh.in
+++ b/include/ignition/gui/config.hh.in
@@ -14,4 +14,4 @@
 #cmakedefine BUILD_TYPE_DEBUG 1
 #cmakedefine BUILD_TYPE_RELEASE 1
 
-#define IGN_GUI_PLUGIN_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/${IGN_LIB_INSTALL_DIR}/ign-${IGN_DESIGNATION}-${PROJECT_VERSION_MAJOR}/plugins"
+#define IGN_GUI_PLUGIN_INSTALL_DIR "ign_gui/"
