--- a/src/plugins/camera_tracking/CMakeLists.txt
+++ b/src/plugins/camera_tracking/CMakeLists.txt
@@ -1,10 +1,10 @@
-ign_gui_add_plugin(CameraControllerManager
+ign_gui_add_plugin(CameraTracking
   SOURCES
-    CameraControllerManager.cc
+    CameraTracking.cc
   QT_HEADERS
-    CameraControllerManager.hh
+    CameraTracking.hh
   TEST_SOURCES
-    # CameraControllerManager_TEST.cc
+    # CameraTracking_TEST.cc
   PUBLIC_LINK_LIBS
    ignition-rendering${IGN_RENDERING_VER}::ignition-rendering${IGN_RENDERING_VER}
    ignition-common${IGN_COMMON_VER}::profiler
