Split transport scene manager into a plugin outside Scene3D (#221)
Signed-off-by: Louise Poubel <louise@openrobotics.org>
Signed-off-by: ahcorde <ahcorde@gmail.com>

Co-authored-by: Alejandro Hernández Cordero <ahcorde@gmail.com>

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -120,10 +120,12 @@ add_subdirectory(image_display)
 add_subdirectory(key_publisher)
 add_subdirectory(plotting)
 add_subdirectory(publisher)
+add_subdirectory(minimal_scene)
 add_subdirectory(scene3d)
 add_subdirectory(screenshot)
 add_subdirectory(tape_measure)
 add_subdirectory(topic_echo)
 add_subdirectory(topic_viewer)
+add_subdirectory(transport_scene_manager)
 add_subdirectory(world_control)
 add_subdirectory(world_stats)
