--- a/examples/config/scene3d.config
+++ b/examples/config/scene3d.config
@@ -4,38 +4,34 @@
     <width>1216</width>
     <height>894</height>
 </window>
-<plugin filename="Scene3D">
+<plugin filename="MinimalScene">
     <ignition-gui>
       <title>View 1</title>
       <property type="string" key="state">docked</property>
     </ignition-gui>
-    <engine>ogre</engine>
+    <engine>ogre2</engine>
     <scene>scene</scene>
-    <ambient_light>0 0 1</ambient_light>
+    <ambient_light>1 1 1</ambient_light>
     <background_color>0.8 0.8 0.8</background_color>
     <camera_pose>-6 0 6 0 0.5 0</camera_pose>
 </plugin>
-<plugin filename="Grid3D" name="3D Grid">
-  <engine>ogre</engine>
-  <scene>scene</scene>
+<plugin filename="TransportSceneManager" name="Transport Scene Manager">
+  <ignition-gui>
+    <anchors target="View 1">
+      <line own="right" target="right"/>
+      <line own="top" target="top"/>
+    </anchors>
+    <property key="resizable" type="bool">false</property>
+    <property key="width" type="double">5</property>
+    <property key="height" type="double">5</property>
+    <property key="state" type="string">floating</property>
+    <property key="showTitleBar" type="bool">false</property>
+  </ignition-gui>
+  <service>/example/scene</service>
+  <pose_topic>/example/pose</pose_topic>
+  <deletion_topic>/example/delete</deletion_topic>
+  <scene_topic>/example/scene</scene_topic>
 </plugin>
-<!-- TODO(anyone) Support multiple scenes in the same window
-  plugin filename="Scene3D">
-    <title>View 2</title>
-    <scene>scene</scene>
-    <camera_pose>-6 -6 6 0 0.5 0.7</camera_pose>
-</plugin-->
-<!-- TODO(anyone) Fix grid plugin
-  plugin filename="Grid3D" delete_later="true">
-  <engine>ogre</engine>
-  <scene>scene</scene>
-  <insert>
-    <cell_count>5</cell_count>
-    <pose>3.0 0 0 0 0 0</pose>
-    <color>0.2 0.2 0.2 1.0</color>
-  </insert>
-</plugin-->
-
 <plugin filename="WorldControl">
   <ignition-gui>
     <title>Controls</title>
