--- a/examples/config/scene3d.config
+++ b/examples/config/scene3d.config
@@ -44,6 +44,7 @@
     <property key="state" type="string">floating</property>
     <property key="showTitleBar" type="bool">false</property>
   </ignition-gui>
+  <stats_topic>/example/stats</stats_topic>
 </plugin>
 <plugin filename="CameraTracking" name="Camera tracking">
   <ignition-gui>
