--- a/src/cmd/CMakeLists.txt
+++ b/src/cmd/CMakeLists.txt
@@ -124,7 +124,7 @@ if (TARGET UNIT_ign_TEST)
   if(NOT WIN32)
     set(NEWPATH $ENV{PATH})
   else()
-    set(NEWPATH ${CMAKE_INSTALL_PREFIX}/bin\\;$ENV{PATH})
+    set(NEWPATH ${CMAKE_INSTALL_PREFIX}/bin;$ENV{PATH})
     STRING(REPLACE ";" "\\;" NEWPATH "${NEWPATH}")
     message("PATH CMAKE: " ${NEWPATH})
   endif()
