QT_QPA_PLATFORM
Signed-off-by: ahcorde <ahcorde@gmail.com>

--- a/src/cmd/CMakeLists.txt
+++ b/src/cmd/CMakeLists.txt
@@ -120,7 +120,7 @@ if (TARGET UNIT_ign_TEST)
 	file(GENERATE
 	  OUTPUT "${CMAKE_BINARY_DIR}/test/conf/$<CONFIG>/${IGN_DESIGNATION}${PROJECT_VERSION_MAJOR}.yaml"
 	  INPUT "${CMAKE_CURRENT_BINARY_DIR}/${IGN_DESIGNATION}${PROJECT_VERSION_MAJOR}.yaml.configured")
-  
+
   set(additional_path "")
   if(NOT WIN32)
     set(NEWPATH $ENV{PATH})
@@ -133,7 +133,7 @@ if (TARGET UNIT_ign_TEST)
     UNIT_ign_TEST
     PROPERTIES
     ENVIRONMENT
-      "PATH=${additional_path}\\;${NEWPATH};IGN_CONFIG_PATH=${CMAKE_BINARY_DIR}/test/conf/$<CONFIG>"
+      "PATH=${additional_path}\\;${NEWPATH};IGN_CONFIG_PATH=${CMAKE_BINARY_DIR}/test/conf/$<CONFIG>\\;QT_QPA_PLATFORM_PLUGIN_PATH=C:\vcpkg\installed\x64-windows\plugins\platforms\\;QT_QPA_PLATFORM=offscreen"
   )
 endif()
 
