test event behavior
Signed-off-by: Ashton Larkin <ashton@openrobotics.org>

--- a/src/plugins/world_control/CMakeLists.txt
+++ b/src/plugins/world_control/CMakeLists.txt
@@ -3,6 +3,7 @@ ign_gui_add_plugin(WorldControl
     WorldControl.cc
   QT_HEADERS
     WorldControl.hh
+    WorldControlEventListener.hh
   TEST_SOURCES
     WorldControl_TEST.cc
 )
