--- a/src/plugins/world_control/CMakeLists.txt
+++ b/src/plugins/world_control/CMakeLists.txt
@@ -1,6 +1,7 @@
 ign_gui_add_plugin(WorldControl
   SOURCES
     WorldControl.cc
+    WorldControlEventListener.cc
   QT_HEADERS
     WorldControl.hh
     WorldControlEventListener.hh
