--- a/src/plugins/world_control/CMakeLists.txt
+++ b/src/plugins/world_control/CMakeLists.txt
@@ -1,3 +1,9 @@
+set(test_sources)
+
+if (NOT MSVC)
+  set(test_sources WorldControl_TEST.cc)
+endif()
+
 ign_gui_add_plugin(WorldControl
   SOURCES
     WorldControl.cc
@@ -5,7 +11,5 @@ ign_gui_add_plugin(WorldControl
   QT_HEADERS
     WorldControl.hh
     WorldControlEventListener.hh
-  TEST_SOURCES
-    WorldControl_TEST.cc
+  TEST_SOURCES ${test_sources}
 )
-
