--- a/src/plugins/world_control/CMakeLists.txt
+++ b/src/plugins/world_control/CMakeLists.txt
@@ -1,15 +1,19 @@
-set(test_sources)
-
 if (NOT MSVC)
-  set(test_sources WorldControl_TEST.cc)
+  ign_gui_add_plugin(WorldControl
+    SOURCES
+      WorldControl.cc
+      WorldControlEventListener.cc
+    QT_HEADERS
+      WorldControl.hh
+      WorldControlEventListener.hh
+    TEST_SOURCES
+      WorldControl_TEST.cc
+  )
+else()
+  ign_gui_add_plugin(WorldControl
+    SOURCES
+      WorldControl.cc
+    QT_HEADERS
+      WorldControl.hh
+  )
 endif()
-
-ign_gui_add_plugin(WorldControl
-  SOURCES
-    WorldControl.cc
-    WorldControlEventListener.cc
-  QT_HEADERS
-    WorldControl.hh
-    WorldControlEventListener.hh
-  TEST_SOURCES ${test_sources}
-)
