Support emitting an event on play/pause/step (#306)
* share updated GUI ECM info with server on play

Signed-off-by: Ashton Larkin <ashton@openrobotics.org>

* clarify docs and fix service request type

Signed-off-by: Ashton Larkin <ashton@openrobotics.org>

* send event on play/pause/step

Signed-off-by: Ashton Larkin <ashton@openrobotics.org>

* support service and event

Signed-off-by: Ashton Larkin <ashton@openrobotics.org>

* fix tests

Signed-off-by: Ashton Larkin <ashton@openrobotics.org>

* Flip the default settng of usEvent in order to maintain current behavior by default

Signed-off-by: Nate Koenig <nate@openrobotics.org>

* ignore stats msgs triggered by a step

Signed-off-by: Ashton Larkin <ashton@openrobotics.org>

* explicit constructor for new gui event

Signed-off-by: Ashton Larkin <ashton@openrobotics.org>

* remove deprecation notes (support both event and service)

Signed-off-by: Ashton Larkin <ashton@openrobotics.org>

* test event behavior

Signed-off-by: Ashton Larkin <ashton@openrobotics.org>

* add missing helper test class

Signed-off-by: Ashton Larkin <ashton@openrobotics.org>

* Disable tests on windows

Signed-off-by: Nate Koenig <nate@openrobotics.org>

* Address PR feedback

Signed-off-by: Nate Koenig <nate@openrobotics.org>

Co-authored-by: Nate Koenig <nate@openrobotics.org>
Co-authored-by: Louise Poubel <louise@openrobotics.org>

--- a/src/plugins/world_control/CMakeLists.txt
+++ b/src/plugins/world_control/CMakeLists.txt
@@ -1,9 +1,19 @@
-ign_gui_add_plugin(WorldControl
-  SOURCES
-    WorldControl.cc
-  QT_HEADERS
-    WorldControl.hh
-  TEST_SOURCES
-    WorldControl_TEST.cc
-)
-
+if (NOT MSVC)
+  ign_gui_add_plugin(WorldControl
+    SOURCES
+      WorldControl.cc
+      WorldControlEventListener.cc
+    QT_HEADERS
+      WorldControl.hh
+      WorldControlEventListener.hh
+    TEST_SOURCES
+      WorldControl_TEST.cc
+  )
+else()
+  ign_gui_add_plugin(WorldControl
+    SOURCES
+      WorldControl.cc
+    QT_HEADERS
+      WorldControl.hh
+  )
+endif()
