Add features from Grid3d to GridConfig
Signed-off-by: Louise Poubel <louise@openrobotics.org>

--- a/examples/config/grid_config.config
+++ b/examples/config/grid_config.config
@@ -28,9 +28,18 @@
   <ignition-gui>
     <property type="string" key="state">docked</property>
   </ignition-gui>
-  <cell_count>3</cell_count>
-  <vertical_cell_count>2</vertical_cell_count>
-  <cell_length>2</cell_length>
-  <pose>1 2 3  0 0 0</pose>
-  <color>1 0 0 1</color>
+  <insert>
+    <horizontal_cell_count>3</horizontal_cell_count>
+    <vertical_cell_count>2</vertical_cell_count>
+    <cell_length>2</cell_length>
+    <pose>1 2 3  0 0 0</pose>
+    <color>1 0 0 1</color>
+  </insert>
+  <insert>
+    <horizontal_cell_count>2</horizontal_cell_count>
+    <vertical_cell_count>0</vertical_cell_count>
+    <cell_length>1</cell_length>
+    <pose>0 0 0  0.5 0 0</pose>
+    <color>0 1 0 1</color>
+  </insert>
 </plugin>
