--- a/src/plugins/grid_config/CMakeLists.txt
+++ b/src/plugins/grid_config/CMakeLists.txt
@@ -8,5 +8,7 @@ ign_gui_add_plugin(GridConfig
 )
 
 # Also install as Grid3D, which was a legacy plugin with a subset of features
-set_target_properties(GridConfig PROPERTIES OUTPUT_NAME Grid3D)
-install (TARGETS GridConfig DESTINATION ${IGNITION_GUI_PLUGIN_INSTALL_DIR})
+install (
+  FILES $<TARGET_FILE:GridConfig>
+  RENAME ${CMAKE_SHARED_LIBRARY_PREFIX}Grid3D${CMAKE_SHARED_LIBRARY_SUFFIX}
+  DESTINATION ${IGNITION_GUI_PLUGIN_INSTALL_DIR})
