NavSat (GPS) map plugin
Signed-off-by: Louise Poubel <louise@openrobotics.org>

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -123,6 +123,7 @@ add_subdirectory(plotting)
 add_subdirectory(publisher)
 add_subdirectory(marker_manager)
 add_subdirectory(minimal_scene)
+add_subdirectory(navsat_map)
 add_subdirectory(scene3d)
 add_subdirectory(screenshot)
 add_subdirectory(tape_measure)
