--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,13 +39,13 @@ ign_find_package(TINYXML2 REQUIRED PRIVATE PRETTY tinyxml2)
 
 #--------------------------------------
 # Find ignition-math
-ign_find_package(ignition-math6 REQUIRED VERSION 6.5)
-set(IGN_MATH_VER ${ignition-math6_VERSION_MAJOR})
+ign_find_package(ignition-math7 REQUIRED)
+set(IGN_MATH_VER ${ignition-math7_VERSION_MAJOR})
 
 #--------------------------------------
 # Find ignition-common
-ign_find_package(ignition-common4 REQUIRED COMPONENTS profiler VERSION 4.1)
-set(IGN_COMMON_VER ${ignition-common4_VERSION_MAJOR})
+ign_find_package(ignition-common5 REQUIRED COMPONENTS profiler)
+set(IGN_COMMON_VER ${ignition-common5_VERSION_MAJOR})
 
 #--------------------------------------
 # Find ignition-plugin
