--- a/examples/standalone/dialogs/CMakeLists.txt
+++ b/examples/standalone/dialogs/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.10.2 FATAL_ERROR)
 
+project(ignition-gui-dialogs)
+
 if(POLICY CMP0100)
   cmake_policy(SET CMP0100 NEW)
 endif()
