--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -120,6 +120,7 @@ add_subdirectory(image_display)
 add_subdirectory(interactive_view_control)
 add_subdirectory(key_publisher)
 add_subdirectory(plotting)
+add_subdirectory(point_cloud)
 add_subdirectory(publisher)
 add_subdirectory(marker_manager)
 add_subdirectory(minimal_scene)
