Changed the way dialog on exit is configured.
Signed-off-by: Martin Pecka <peckama2@fel.cvut.cz>

--- a/examples/config/dialog_on_exit_shutdown.config
+++ b/examples/config/dialog_on_exit_shutdown.config
@@ -5,14 +5,14 @@
   <width>1000</width>
   <height>845</height>
   <default_exit_action>SHUTDOWN_SERVER</default_exit_action>
-  <dialog_on_exit>
-    <show>true</show>
+  <dialog_on_exit>true</dialog_on_exit>
+  <dialog_on_exit_options>
     <prompt_text>really? žřčš</prompt_text>
     <show_shutdown_button>true</show_shutdown_button>
     <show_close_gui_button>true</show_close_gui_button>
     <shutdown_button_text>Quit Server&amp;GUI</shutdown_button_text>
     <close_gui_button_text>Quit GUI only</close_gui_button_text>
-  </dialog_on_exit>
+  </dialog_on_exit_options>
 </window>
 
 <plugin filename="ShutdownButton">
