Addressed comments from review.
Signed-off-by: Martin Pecka <peckama2@fel.cvut.cz>

--- a/examples/config/dialog_on_exit_shutdown.config
+++ b/examples/config/dialog_on_exit_shutdown.config
@@ -10,7 +10,7 @@
     <prompt_text>really? žřčš</prompt_text>
     <show_shutdown_button>true</show_shutdown_button>
     <show_close_gui_button>true</show_close_gui_button>
-    <shutdown_button_text>Quit Server&amp;GUI</shutdown_button_text>
+    <shutdown_button_text>Quit Server and GUI</shutdown_button_text>
     <close_gui_button_text>Quit GUI only</close_gui_button_text>
   </dialog_on_exit_options>
 </window>
