--- a/test/config/close_dialog_auto_shutdown.config
+++ b/test/config/close_dialog_auto_shutdown.config
@@ -2,5 +2,5 @@
 
 <window>
   <dialog_on_exit>false</dialog_on_exit>
-  <default_exit_action>SHUTDOWN_SERVER</default_exit_action>
+  <default_exit_action>shutdown_server</default_exit_action>
 </window>
