--- a/include/gz/gui/gz_auto_headers.hh.in
+++ b/include/gz/gui/gz_auto_headers.hh.in
@@ -1,3 +1,3 @@
 // Automatically generated
-#include <ignition/${IGN_DESIGNATION}/config.hh>
+#include <gz/${IGN_DESIGNATION}/config.hh>
 ${ign_headers}
